--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Profile Settings</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
     <div class="blank"></div>
     <div class="main_container">
         <div class="pic_name">
-            <img src="scss/Images/me.jpg" alt="A boy with a hat">
+            <img src="css/Images/me.jpg" alt="A boy with a hat">
             <h2>Md.Shihab Shahriar Rashu</h2>
             <h4>md.shihabshahriarrashu</h4>
         </div>
